--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
             <div class="inputs">
               <div class="row">
                 <div class="input_label">
-                  <label for="">الطول</label>
+                  <label for="paper_height">الطول</label>
                   <input type="text" id="paper_height" value="100" />
                 </div>
                 
                 <div class="input_label">
-                  <label for="">العرض</label>
+                  <label for="paper_width">العرض</label>
                 <input type="text" id="paper_width" value="70" />
                 </div>
                 <div class="input_label">
-                  <label for="">عدد الاوجه</label>
+                  <label for="faces">عدد الاوجه</label>
                   <select name="" id="faces">
                     <option value="وجة واحد">وجة واحد</option>
                     <option value="وجهان">وجهان</option>
@@ -39,7 +39,7 @@
                 </div>
    
                <div class="input_label">
-                <label for="">الخامة</label>
+                <label for="material">الخامة</label>
 
                 <select name="" id="material">
                   <option value="خامة 1">خامة 1</option>
@@ -49,7 +49,7 @@
                </div>
 
                <div class="input_label">
-                <label for="">الكمية</label>
+                <label for="quantity">الكمية</label>
                 <input type="text" id="quantity" value="10" />
               </div>
               </div>
