--- a/cards/index.html
+++ b/cards/index.html
@@ -31,6 +31,9 @@
                   <label for="paper_width">العرض</label>
                 <input type="text" id="paper_width" value="5" />
                 </div>
+                
+
+
                 <div class="input_label">
                   <label for="faces">عدد الاوجه</label>
                   <select name="" id="faces">
@@ -43,9 +46,9 @@
                 <label for="material">الخامة</label>
 
                 <select name="" id="material">
-                  <option value="6">كوشية 150 جرام</option>
-                  <option value="11">كوشية 200 جرام</option>
-                  <option value="13">كوشية 300 جرام</option>
+                  <option name="كوشية 150 جرام" value="6">كوشية 150 جرام</option>
+                  <option name="كوشية 200 جرام" value="11">كوشية 200 جرام</option>
+                  <option name="كوشية 300 جرام" value="13">كوشية 300 جرام</option>
                 </select>
                </div>
 
@@ -91,6 +94,10 @@
           </tr>
         </thead>
         <tbody>
+          <tr>
+            <td>عدد الأفرخ: </td>
+            <td><span class="far5_count_bill"></span></td>
+          </tr>
           <tr>
             <td>عدد الكروت فى الفرخ الواحد: </td>
             <td><span class="carts_bill"></span></td>
