--- a/cards/index.html
+++ b/cards/index.html
@@ -37,8 +37,8 @@
                 <div class="input_label">
                   <label for="faces">عدد الاوجه</label>
                   <select name="" id="faces">
-                    <option value="وجة واحد">وجة واحد</option>
-                    <option value="وجهان">وجهان</option>
+                    <option value="1">وجة واحد</option>
+                    <option value="2">وجهان</option>
                   </select>
                 </div>
    
