--- a/cards/index.html
+++ b/cards/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="../logo.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../logo.jpg" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,7 +15,10 @@
     <script defer src="index.js"></script>
   </head>
   <body dir="rtl">
-    <main>
+    <center>
+      <h1>صلي على النبي</h1>
+    </center>
+    <!-- <main>
       <h1 align="center">أدخل المقاسات الخاصة بك</h1>
       <section>
         <div class="controls">
@@ -145,7 +148,7 @@
       </table>
       <div id="output"></div>
      
-    </main>
+    </main> -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   </body>
