--- a/client/index.html
+++ b/client/index.html
@@ -16,10 +16,10 @@
   </head>
   <body dir="rtl">
     <center>
-      <h1>صلي على النبي</h1>
+      <!-- <h1>صلي على النبي</h1> -->
     </center>
-    <!-- <main>
-      <h1 align="center">أدخل المقاسات الخاصة بك</h1>
+     <main>
+      <h1 align="center"> المقاسات الخاصة بالعميل</h1>
       <section>
         <div class="controls">
           <form action="">
@@ -97,14 +97,14 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
+          <!-- <tr>
             <td>عدد الأفرخ: </td>
             <td><span class="far5_count_bill"></span></td>
           </tr>
           <tr>
             <td>عدد الكروت فى الفرخ الواحد: </td>
             <td><span class="carts_bill"></span></td>
-          </tr>
+          </tr> -->
           <tr>
             <td>طول الكارت: </td>
             <td><span class="width_bill"></span></td>
@@ -128,14 +128,14 @@
    
         </tbody>
         <tfoot>
-          <tr>
+          <!-- <tr>
             <td>
               تكلفة الأفرخ:
             </td>
             <td>
               <span id="price"></span>
             </td>
-          </tr>
+          </tr> -->
           <tr>
             <td>
               تكلفة الكروت:
@@ -148,7 +148,7 @@
       </table>
       <div id="output"></div>
      
-    </main> -->
+    </main> 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   </body>
