--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="logo.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="logo.jpg" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,7 +17,7 @@
   <body dir="rtl">
     <main>
       <h1 align="center">خدماتنا</h1>
-      <div class="all_services">
+      <!-- <div class="all_services">
         <div class="service cards">
             <a href="cards/index.html"> 
                 <p align="center" class="title">كروت شخصية</p>    
@@ -42,6 +42,24 @@
                 </div>
             </a>
           </div>
+      </div> -->
+      <div class="all_services">
+        <div class="service cards">
+          <a href="owner/index.html">
+            <p align="center" class="title">خاص بالشركة</p>
+            <div class="card_img">
+              <img src="owner/Cart.jpg" alt="" />
+            </div>
+          </a>
+        </div>
+        <div class="service flayer">
+          <a href="client/index.html">
+            <p align="center" class="title">خاص بالعميل</p>
+            <div class="card_img">
+              <img src="flayer.jpg" alt="" />
+            </div>
+          </a>
+        </div>
       </div>
     </main>
   </body>
